; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_cls_tcindex.c_tcindex_destroy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_cls_tcindex.c_tcindex_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcf_proto = type { i32* }
%struct.tcindex_data = type { %struct.tcindex_data*, %struct.tcindex_data* }
%struct.tcf_walker = type { i32*, i64, i64 }

@.str = private unnamed_addr constant [29 x i8] c"tcindex_destroy(tp %p),p %p\0A\00", align 1
@tcindex_destroy_element = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tcf_proto*)* @tcindex_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tcindex_destroy(%struct.tcf_proto* %0) #0 {
  %2 = alloca %struct.tcf_proto*, align 8
  %3 = alloca %struct.tcindex_data*, align 8
  %4 = alloca %struct.tcf_walker, align 8
  store %struct.tcf_proto* %0, %struct.tcf_proto** %2, align 8
  %5 = load %struct.tcf_proto*, %struct.tcf_proto** %2, align 8
  %6 = call %struct.tcindex_data* @PRIV(%struct.tcf_proto* %5)
  store %struct.tcindex_data* %6, %struct.tcindex_data** %3, align 8
  %7 = load %struct.tcf_proto*, %struct.tcf_proto** %2, align 8
  %8 = load %struct.tcindex_data*, %struct.tcindex_data** %3, align 8
  %9 = call i32 @pr_debug(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), %struct.tcf_proto* %7, %struct.tcindex_data* %8)
  %10 = getelementptr inbounds %struct.tcf_walker, %struct.tcf_walker* %4, i32 0, i32 2
  store i64 0, i64* %10, align 8
  %11 = getelementptr inbounds %struct.tcf_walker, %struct.tcf_walker* %4, i32 0, i32 1
  store i64 0, i64* %11, align 8
  %12 = getelementptr inbounds %struct.tcf_walker, %struct.tcf_walker* %4, i32 0, i32 0
  store i32* @tcindex_destroy_element, i32** %12, align 8
  %13 = load %struct.tcf_proto*, %struct.tcf_proto** %2, align 8
  %14 = call i32 @tcindex_walk(%struct.tcf_proto* %13, %struct.tcf_walker* %4)
  %15 = load %struct.tcindex_data*, %struct.tcindex_data** %3, align 8
  %16 = getelementptr inbounds %struct.tcindex_data, %struct.tcindex_data* %15, i32 0, i32 1
  %17 = load %struct.tcindex_data*, %struct.tcindex_data** %16, align 8
  %18 = call i32 @kfree(%struct.tcindex_data* %17)
  %19 = load %struct.tcindex_data*, %struct.tcindex_data** %3, align 8
  %20 = getelementptr inbounds %struct.tcindex_data, %struct.tcindex_data* %19, i32 0, i32 0
  %21 = load %struct.tcindex_data*, %struct.tcindex_data** %20, align 8
  %22 = call i32 @kfree(%struct.tcindex_data* %21)
  %23 = load %struct.tcindex_data*, %struct.tcindex_data** %3, align 8
  %24 = call i32 @kfree(%struct.tcindex_data* %23)
  %25 = load %struct.tcf_proto*, %struct.tcf_proto** %2, align 8
  %26 = getelementptr inbounds %struct.tcf_proto, %struct.tcf_proto* %25, i32 0, i32 0
  store i32* null, i32** %26, align 8
  ret void
}

declare dso_local %struct.tcindex_data* @PRIV(%struct.tcf_proto*) #1

declare dso_local i32 @pr_debug(i8*, %struct.tcf_proto*, %struct.tcindex_data*) #1

declare dso_local i32 @tcindex_walk(%struct.tcf_proto*, %struct.tcf_walker*) #1

declare dso_local i32 @kfree(%struct.tcindex_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
